Closed Bug 1769494 Opened 2 years ago Closed 2 years ago

many build tasks generate logs too big to parse for Treeherder, preventing the detection of failure lines

Categories

(Developer Infrastructure :: Source Code Analysis, defect)

defect

Tracking

(firefox-esr91 unaffected, firefox100 unaffected, firefox101 unaffected, firefox102 fixed)

RESOLVED FIXED
102 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox100 --- unaffected
firefox101 --- unaffected
firefox102 --- fixed

People

(Reporter: aryx, Assigned: saschanaz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Since bug 1766038 landed, many build tasks' log size increased above 5MB in gzipped format, preventing Treeherder from parsing it. If such a build task fails, no failure lines will be shown.

Affected tasks (might depend on the push if the log size is close to the 5MB):
build-android-aarch64/opt
build-android-x86_64-lite/debug
build-android-x86_64-lite/opt
build-android-x86_64/debug
build-android-x86_64/opt
build-linux64-asan/opt
build-linux64-tsan/opt
build-linux64/debug
build-linux64/opt
build-macosx64/debug
build-macosx64/opt
build-win32/debug
build-win32/opt
build-win64-asan/opt
build-win64-hybrid/plain
build-win64/debug

Example log

Flags: needinfo?(krosylight)
Depends on: 1769290
Flags: needinfo?(krosylight)

The example log is 5.3MB in gzipped. Fortunately it's just a little bit larger than the limit, and I have a pending patch.

Please don't emit warnings, emit errors.

My plan was to slowly replace them and ultimately disallow the typedef outside SpiderMonkey (And maybe remove them, but that depends on what SM people think)

Has Regression Range: --- → yes

PC also follows SpiderMonkey rule so it should be excluded for now. This will reduce a good amount of warnings.

Assignee: nobody → krosylight
Status: NEW → ASSIGNED
Pushed by krosylight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e1ef203066d5 Exclude xpc from JSHandleRootedTypedefChecker r=andi

It's 1.3MB gzipped with the patch, so it should be good now. Remaining warnings will be fixed in bug 1769290.

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
Product: Firefox Build System → Developer Infrastructure
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: