Bug 1769494 - Exclude xpc from JSHandleRootedTypedefChecker r=andi

XPC also follows SpiderMonkey rule so it should be excluded for now. This will reduce a good amount of warnings.

Differential Revision: https://phabricator.services.mozilla.com/D146497